fix DT-2309, product thumbnails get cut off, add max-height to thumbnails

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -1,5 +1,5 @@
 // ------------------------------------
-// Prism: CSS > Plugin: Ecommerce
+// CSS > Plugin: Ecommerce
 // ------------------------------------
 
 // -----------------------------
@@ -389,6 +389,13 @@
     @media @bp-tablet {
         width: 100%;
         margin-right: 0;
+    }
+}
+
+.product-gallery .image--thumb {
+    max-height: 80px;
+    @media @mobile {
+        max-height: 60px;
     }
 }
 
